your commit message

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
       --shadow:0 10px 30px rgba(17,19,24,.10);
       --shadow-hover:0 18px 50px rgba(17,19,24,.14);
       --maxw: 1040px;
+      /* NEW: accent for active nav */
+      --accent:#b91c1c; /* change to #f59e0b for yellow if you want */
     }
 
     /* === Page background: subtle dotted paper === */
@@ -35,6 +37,8 @@
     .nav-inner{display:flex;align-items:center;justify-content:space-between;padding:14px 2px}
     .brand{display:flex;align-items:center;gap:10px;text-decoration:none;color:inherit;font-weight:700}
     .brand img{width:30px;height:30px;border-radius:8px;object-fit:cover}
+    /* NEW: show only Snoopy (hide text) */
+    .brand span{display:none;}
 
     /* ------- New: Joanna-style nav w/ dropdown ------- */
     .nav-links{display:flex;align-items:center;gap:28px}
@@ -58,6 +62,21 @@
     }
     .dropdown-menu a:hover{background:#f8fafc}
     .dropdown[aria-expanded="true"] .dropdown-menu{display:block}
+
+    /* NEW: active-state like Joanna (red + little star above) */
+    .nav-links .active{
+      color:var(--accent);
+      position:relative;
+    }
+    .nav-links .active::before{
+      content:"✦";
+      position:absolute;
+      top:-14px; left:50%;
+      transform:translateX(-50%);
+      font-size:12px; line-height:1;
+      color:var(--accent);
+      opacity:.95;
+    }
 
     /* ===== Hero ===== */
     .hero{padding:56px 0 18px}
@@ -168,7 +187,7 @@
         <span>Jan Arroyo</span>
       </a>
 
-      <!-- New: two-item nav like Joanna; dropdown holds fun pages -->
+      <!-- two-item nav like Joanna; dropdown holds fun pages -->
       <nav class="nav-links" aria-label="Primary">
         <a href="#work" aria-label="Work">WORK</a>
 
@@ -503,6 +522,31 @@
           dot.classList.remove('dot-grow');
         }
       });
+    })();
+
+    // ---------- NEW: Active nav behavior ----------
+    (function(){
+      const path = (location.pathname || '').toLowerCase();
+      const workLink = document.querySelector('.nav-links a[href="#work"]');
+      const funBtn   = document.querySelector('.nav-links .dropdown > button');
+
+      // If we're on a fun page (when you reuse the header), highlight JUST FOR FUN
+      const onFunPage = /races\.html|bake\.html|travel\.html/.test(path);
+      if (onFunPage && funBtn) {
+        funBtn.classList.add('active');
+      } else if (workLink) {
+        // Highlight WORK when #work section is in view
+        const work = document.getElementById('work');
+        if (work) {
+          const io = new IntersectionObserver((entries)=>{
+            entries.forEach(en=>{
+              if (en.isIntersecting && en.intersectionRatio > 0.35) workLink.classList.add('active');
+              else workLink.classList.remove('active');
+            });
+          }, {threshold:[0,0.35,1]});
+          io.observe(work);
+        }
+      }
     })();
 
     // ---------- Image sliders ----------
