your commit message

--- a/bake.html
+++ b/bake.html
@@ -6,6 +6,14 @@
   <title>Bake – Jan Arroyo</title>
   <link href="styles.css" rel="stylesheet" />
   <style>
+    /* ===== NEW: dotted paper background to match home ===== */
+    html,body{
+      background:
+        radial-gradient(circle at 1px 1px, #e8ecf1 1.2px, rgba(255,255,255,0) 1.3px) 0 0/12px 12px,
+        #fafbfc;
+      color:#0f172a;
+    }
+
     /* ===== Interactive sprinkle canvas sits behind everything ===== */
     #sprinkles {
       position: fixed; inset: 0; z-index: -3; pointer-events: none;
@@ -19,6 +27,52 @@
         radial-gradient(1200px 500px at 110% 110%, rgba(210,235,255,.45), transparent 60%);
       opacity:.9;
     }
+
+    /* ===== NEW: Joanna-style “ghost” nav (only styling added; markup kept local) ===== */
+    :root{ --accent:#b91c1c; }
+    .nav{
+      position:sticky; top:16px; z-index:20;
+      background:transparent; border:0; backdrop-filter:none;
+    }
+    .nav .container{ width:100%; margin:0; padding:0 28px; }
+    .nav-inner{ display:flex; align-items:center; justify-content:space-between; padding:10px 0; }
+    .brand-logo{ display:flex; align-items:center; gap:10px; text-decoration:none; color:inherit; font-weight:700; }
+    .brand-logo img{ width:24px; height:24px; border-radius:8px; object-fit:cover; }
+    .nav-links{ display:flex; align-items:center; gap:18px; }
+    .nav-links a, .nav-links button{
+      color:#111827; text-decoration:none; font-weight:800; font-size:14.5px; letter-spacing:.2px;
+      background:none; border:none; padding:0; cursor:pointer;
+    }
+    .nav-links a:hover, .nav-links button:hover{ opacity:.8; }
+
+    /* dropdown */
+    .dropdown{ position:relative; }
+    .dropdown-menu{
+      position:absolute; right:0; top:140%;
+      background:#fff; border:1px solid #e5e7eb; border-radius:10px;
+      box-shadow:0 10px 30px rgba(17,19,24,.10);
+      min-width:180px; padding:8px; display:none;
+    }
+    .dropdown[aria-expanded="true"] .dropdown-menu{ display:block; }
+    .dropdown-menu a{ display:block; padding:10px 12px; border-radius:8px; font-weight:600; font-size:14px; color:#111827; }
+    .dropdown-menu a:hover{ background:#f8fafc; }
+
+    /* active state (red + tiny star above) */
+    .nav-links .active{ color:var(--accent); position:relative; }
+    .nav-links .active::before{
+      content:"✦"; position:absolute; top:-14px; left:50%; transform:translateX(-50%);
+      font-size:12px; line-height:1; color:var(--accent); opacity:.95;
+    }
+
+    /* ===== NEW: hover “dot” widget ===== */
+    .hover-dot{
+      position:fixed; left:0; top:0; width:10px; height:10px; border-radius:999px;
+      background:#facc15; box-shadow:0 0 20px rgba(250,204,21,.5);
+      transform:translate3d(-100px,-100px,0);
+      transition:transform .12s ease-out, width .15s ease, height .15s ease, opacity .2s ease;
+      mix-blend-mode:multiply; pointer-events:none; z-index:9999; opacity:.85;
+    }
+    .dot-grow{ width:18px !important; height:18px !important; }
 
     /* ===== Grid: 3 per row (2 / 1 on smaller screens) ===== */
     .rcp-grid{display:grid;gap:20px;grid-template-columns:repeat(3,1fr);}
@@ -246,8 +300,7 @@
       position:absolute; top:-10px; right:16px; width:75px; height:26px;
       transform: rotate(7deg);
       background:
-        linear-gradient(45deg, rgba(0,0,0,.06) 25%, transparent 25% 50%, rgba(0,0,0,.06) 50% 75%, transparent 75%) 0/12px 12px,
-        rgba(255, 230, 180, .85);
+        linear-gradient(45deg, rgba(0,0,0,.06) 25%, transparent 25% 50%, rgba(0,0,0,.06) 50% 75%, transparent 75%) 0/12px 12px, rgba(255, 230, 180, .85);
       border-radius: 6px;
       box-shadow: 0 8px 16px rgba(17,19,24,.15);
       mix-blend-mode: multiply;
@@ -296,7 +349,7 @@
         linear-gradient(45deg, rgba(0,0,0,.06) 25%, transparent 25% 50%, rgba(0,0,0,.06) 50% 75%, transparent 75%) 0/12px 12px,
         rgba(255, 230, 180, .9);
       border-radius:6px; transform: rotate(-10deg);
-      box-shadow: 0 8px 16px rgba(17,19,24,.18);
+      box-shadow: 0 8px 16px rgba(0,0,0,.18);
     }
     @media (max-width:820px){
       .polaroid{ justify-self: start; transform: rotate(-2deg); width: min(78vw, 320px); }
@@ -317,21 +370,25 @@
   <!-- Interactive sprinkle background -->
   <canvas id="sprinkles"></canvas>
 
-  <nav class="nav">
+  <!-- ===== NEW: ghost header matching home (Snoopy left; Work + dropdown right) ===== -->
+  <nav class="nav" aria-label="Primary">
     <div class="container nav-inner">
       <a class="brand-logo" href="./" aria-label="Home">
         <img src="Snoopy_Welcome.png" alt="Snoopy waving hi" />
       </a>
       <div class="nav-links">
-        <a href="work.html">Projects</a>
-        <a href="races.html">Races</a>
-        <a href="bake.html">Bake</a>
-        <a href="travel.html">Travel</a>
-        <a href="#contact">Contact</a>
+        <a href="./#work">WORK</a>
+        <div class="dropdown" aria-expanded="false">
+          <button type="button" aria-haspopup="true" aria-expanded="false" id="funBtn">JUST FOR FUN ▾</button>
+          <div class="dropdown-menu" role="menu" aria-label="Just for Fun">
+            <a role="menuitem" href="races.html">Races</a>
+            <a role="menuitem" href="bake.html">Bake</a>
+            <a role="menuitem" href="travel.html">Travel</a>
+          </div>
+        </div>
       </div>
     </div>
   </nav>
-
 
   <main class="container work">
     <!-- Scrapbook hero (note + polaroid) -->
@@ -396,9 +453,15 @@
     <img src="images/munchlax-pokemon.gif" alt="Munchlax enjoying snacks">
   </div>
 
+  <!-- NEW: hover dot element -->
+  <div class="hover-dot" id="hoverDot" aria-hidden="true"></div>
+
   <script>
     document.getElementById('y').textContent = new Date().getFullYear();
+  </script>
 
+  <!-- ===== Your original recipes / rendering / modal / confetti scripts (unchanged) ===== -->
+  <script>
     // Repo-safe image path helper
     const BASE = (() => {
       const seg = location.pathname.split('/')[1];
@@ -408,6 +471,7 @@
 
     // ===== Recipes (Top 3 are ranked) =====
     const RECIPES = [
+      /* --- everything below is exactly your original data --- */
       {
         id:"lemon",
         rank: 1,
@@ -869,7 +933,6 @@
       else mIngr.innerHTML = (recipe.ingredients||[]).map(x=>`<li>${x}</li>`).join('');
       if (recipe.stepsHTML) mSteps.innerHTML = recipe.stepsHTML;
       else mSteps.innerHTML = (recipe.steps||[]).map(x=>`<li>${x}</li>`).join('');
-
       dialog.classList.remove('closing'); backdrop.classList.remove('closing');
       document.body.classList.add('no-scroll');
       backdrop.classList.add('open');
@@ -947,6 +1010,30 @@
     }
     resize();
     requestAnimationFrame(tick);
+  </script>
+
+  <!-- ===== NEW: dropdown + hover-dot behavior (added; everything else above unchanged) ===== -->
+  <script>
+    // Dropdown open/close
+    (function(){
+      const dd = document.querySelector('.dropdown'); if(!dd) return;
+      const btn = dd.querySelector('button');
+      const set = (open)=>{ dd.setAttribute('aria-expanded', open ? 'true' : 'false'); btn.setAttribute('aria-expanded', open ? 'true' : 'false'); };
+      btn.addEventListener('click', (e)=>{ e.stopPropagation(); set(dd.getAttribute('aria-expanded')!=='true'); });
+      document.addEventListener('click', ()=> set(false));
+      dd.addEventListener('keydown', (e)=>{ if(e.key==='Escape') set(false); });
+      // mark JUST FOR FUN active on this page
+      btn.classList.add('active');
+    })();
+
+    // Hover “dot” follow
+    (function(){
+      const dot = document.getElementById('hoverDot'); if(!dot) return;
+      window.addEventListener('mousemove', (e)=>{ dot.style.transform = `translate3d(${e.clientX - dot.offsetWidth/2}px, ${e.clientY - dot.offsetHeight/2}px, 0)`; }, {passive:true});
+      const growTargets = 'a, button, .rcp-card, .modal-close';
+      document.addEventListener('mouseover', (e)=>{ if(e.target && e.target.closest && e.target.closest(growTargets)) dot.classList.add('dot-grow'); });
+      document.addEventListener('mouseout', (e)=>{ if(e.target && e.target.closest && e.target.closest(growTargets)) dot.classList.remove('dot-grow'); });
+    })();
   </script>
 
   <script>
