your commit message

--- a/bake.html
+++ b/bake.html
@@ -496,7 +496,7 @@
         stepsHTML: `
           <li><strong>Bake the Cake</strong>
             <ol>
-              <li>Preheat oven to 350°F (177°C). Grease three 8\" pans; line with parchment.</li>
+              <li>Preheat oven to 350°F (177°C). Grease three 8" pans; line with parchment.</li>
               <li>Whisk flour, baking powder, baking soda, and salt.</li>
               <li>Beat butter and sugar until smooth and creamy (~3 min). Beat in eggs and vanilla.</li>
               <li>With mixer on low, add dry ingredients just until combined. Add milk, zest, and lemon juice; mix just until smooth.</li>
@@ -564,7 +564,7 @@
               <li>Stir water and sugar in mixer bowl. Sprinkle yeast on top; let foam ~5 min.</li>
               <li>Add flour and salt. Mix low to shaggy, then medium 5 min until very elastic and sticky.</li>
               <li>Oil a large bowl with 2 Tbsp oil. Scrape in dough, lightly oil the top, cover, and rise until doubled (1–1½ h).</li>
-              <li>Oil a 9×13\" pan with 2 Tbsp oil. Fold dough into a rough ball, transfer to pan, turn to coat, and press to edges. Rest 45 min while heating oven to 425°F.</li>
+              <li>Oil a 9×13" pan with 2 Tbsp oil. Fold dough into a rough ball, transfer to pan, turn to coat, and press to edges. Rest 45 min while heating oven to 425°F.</li>
               <li>Drizzle remaining 2 Tbsp oil. Dimple all over with oiled fingers; sprinkle flaky salt and rosemary. Bake 20–30 min until golden.</li>
             </ol>
           </li>
@@ -611,7 +611,7 @@
           </li>
           <li><strong>Cake</strong>
             <ol>
-              <li>Preheat 350°F. Grease three 8\" pans; line with parchment.</li>
+              <li>Preheat 350°F. Grease three 8" pans; line with parchment.</li>
               <li>Stir sour cream into cooled lavender milk.</li>
               <li>Sift cake flour, sugar, baking powder, and salt into mixer bowl. Add butter, vanilla, and half the milk mixture; mix 1 min.</li>
               <li>Whisk eggs into remaining milk mixture. With mixer running, add in 3 additions (15 sec each), scraping as needed. Don’t overmix.</li>
@@ -651,11 +651,11 @@
         stepsHTML: `
           <li><strong>Bake the Cake</strong>
             <ol>
-              <li>Preheat 350°F. Grease and line three 8\" or 9\" pans.</li>
+              <li>Preheat 350°F. Grease and line three 8" or 9" pans.</li>
               <li>Whisk flour, baking powder, baking soda, and salt.</li>
               <li>Beat butter and sugar on high for 5 min until fluffy; scrape bowl. Add oil; beat 1 min. Beat in eggs, egg whites, and vanilla.</li>
               <li>Add dry ingredients and buttermilk in 3 additions, mixing just until incorporated. Fold in sprinkles.</li>
-              <li>Divide into pans; bake ~25–26 min (8\" may need 27–28). Tent if browning. Cool 20 min, then turn out and cool completely.</li>
+              <li>Divide into pans; bake ~25–26 min (8" may need 27–28). Tent if browning. Cool 20 min, then turn out and cool completely.</li>
             </ol>
           </li>
           <li><strong>Frosting & Assembly</strong>
@@ -691,7 +691,7 @@
           <li>
             <ol>
               <li>Toast pecans at 300°F for 7–8 min; cool.</li>
-              <li>Increase oven to 350°F. Grease two or three 9\" pans; line with parchment.</li>
+              <li>Increase oven to 350°F. Grease two or three 9" pans; line with parchment.</li>
               <li>Whisk brown sugar, sugar, oil, eggs, applesauce, and vanilla.</li>
               <li>In another bowl whisk flour, baking powder, baking soda, salt, and spices.</li>
               <li>Combine wet and dry just until mixed. Fold in carrots and 1 cup toasted pecans.</li>
@@ -750,7 +750,7 @@
         stepsHTML: `
           <li>
             <ol>
-              <li>Preheat 350°F. Grease and line an 8×8\" pan with parchment.</li>
+              <li>Preheat 350°F. Grease and line an 8×8" pan with parchment.</li>
               <li>Whisk butter, cocoa, and vanilla until smooth.</li>
               <li>In mixer, whip eggs with brown sugar until pale and fluffy. Fold in cocoa mixture.</li>
               <li>Fold in flour and salt, then raspberries and chips.</li>
@@ -795,7 +795,7 @@
         img2:p("JellyCat_2.jpg"),
         ingredientsHTML: `
           <li><strong>Equipment</strong>
-            <ul><li>Two 6\" round pans • hand mixer • 3 piping bags</li></ul>
+            <ul><li>Two 6" round pans • hand mixer • 3 piping bags</li></ul>
           </li>
           <li><strong>Cake Layers</strong>
             <ul>
@@ -820,7 +820,7 @@
         stepsHTML: `
           <li><strong>Cake Layers</strong>
             <ol>
-              <li>Preheat 350°F. Line two 6\" pans with parchment rounds.</li>
+              <li>Preheat 350°F. Line two 6" pans with parchment rounds.</li>
               <li>Whisk flour, baking powder, and salt.</li>
               <li>Warm milk with butter, oil, and vanilla until butter melts (don’t boil). Keep warm.</li>
               <li>Beat eggs and sugar 6 minutes (tripled in volume; very pale).</li>
