your commit message

--- a/bake.html
+++ b/bake.html
@@ -16,7 +16,7 @@
 
     /* ===== Interactive sprinkle canvas sits behind everything ===== */
     #sprinkles {
-      position: fixed; inset: 0; z-index: -3; pointer-events: none;
+      position: fixed; inset: 0; z-index: -1; pointer-events: none; /* was -3 so it hid under the wash */
     }
 
     /* Subtle cream wash behind content */
@@ -302,7 +302,7 @@
       background:
         linear-gradient(45deg, rgba(0,0,0,.06) 25%, transparent 25% 50%, rgba(0,0,0,.06) 50% 75%, transparent 75%) 0/12px 12px, rgba(255, 230, 180, .85);
       border-radius: 6px;
-      box-shadow: 0 8px 16px rgba(17,19,24,.15);
+      box-shadow: 0 8px 16px rgba(0,0,0,.15);
       mix-blend-mode: multiply;
     }
 
