your commit message

--- a/bake.html
+++ b/bake.html
@@ -364,6 +364,24 @@
     @media (max-width: 820px){ .hero-collage{ margin:14px auto 4px; } .section-kicker{ margin:4px auto 10px; } }
     .rcp-grid{ margin-top:6px; margin-bottom:24px; }
     main, .content, body { --bottom-pad: 24px; }
+
+    /* Keep brand left, dropdown on the right, and shift WORK toward the dropdown */
+.nav-links{ position:relative; display:flex; align-items:center; gap:16px; width:100%; }
+
+/* amount to shift WORK to the right from center (tweak if you want) */
+:root{ --work-shift: 72px; }  /* try 60–90px range */
+
+/* WORK link */
+.nav-links > a:first-child{
+  position:absolute;
+  left:50%;
+  transform: translateX(calc(-50% + var(--work-shift)));
+  font-weight:800; font-size:14.5px; letter-spacing:.2px;
+}
+
+/* keep the dropdown pinned to the right edge */
+.nav-links > .dropdown{ margin-left:auto; }
+
   </style>
 </head>
 <body>
@@ -372,23 +390,28 @@
 
   <!-- ===== NEW: ghost header matching home (Snoopy left; Work + dropdown right) ===== -->
   <nav class="nav" aria-label="Primary">
-    <div class="container nav-inner">
-      <a class="brand-logo" href="./" aria-label="Home">
-        <img src="Snoopy_Welcome.png" alt="Snoopy waving hi" />
-      </a>
-      <div class="nav-links">
-        <a href="./#work">WORK</a>
-        <div class="dropdown" aria-expanded="false">
-          <button type="button" aria-haspopup="true" aria-expanded="false" id="funBtn">JUST FOR FUN ▾</button>
-          <div class="dropdown-menu" role="menu" aria-label="Just for Fun">
-            <a role="menuitem" href="races.html">Races</a>
-            <a role="menuitem" href="bake.html">Bake</a>
-            <a role="menuitem" href="travel.html">Travel</a>
-          </div>
+  <div class="container nav-inner">
+    <!-- brand on the left -->
+    <a class="brand-logo" href="./" aria-label="Home">
+      <img src="Snoopy_Welcome.png" alt="Snoopy waving hi" />
+    </a>
+
+    <!-- WORK centered (CSS shifts it toward the right), dropdown on the right -->
+    <div class="nav-links">
+      <a href="./#work">WORK</a>
+
+      <div class="dropdown" aria-expanded="false">
+        <button type="button" aria-haspopup="true" aria-expanded="false">JUST FOR FUN ▾</button>
+        <div class="dropdown-menu" role="menu" aria-label="Just for Fun">
+          <a role="menuitem" href="races.html">Races</a>
+          <a role="menuitem" href="bake.html" class="active">Bake</a>
+          <a role="menuitem" href="travel.html">Travel</a>
         </div>
       </div>
     </div>
-  </nav>
+  </div>
+</nav>
+
 
   <main class="container work">
     <!-- Scrapbook hero (note + polaroid) -->
