--- a/index.html
+++ b/index.html
@@ -174,6 +174,24 @@
     }
     a:hover ~ .hover-dot, button:hover ~ .hover-dot{ /* keeps priority; fallback if DOM order changes */ }
     .dot-grow{ width:18px !important; height:18px !important; }
+
+    /* Keep brand left, dropdown on the right, and shift WORK toward the dropdown */
+.nav-links{ position:relative; display:flex; align-items:center; gap:16px; width:100%; }
+
+/* amount to shift WORK to the right from center (tweak if you want) */
+:root{ --work-shift: 72px; }  /* try 60–90px range */
+
+/* WORK link */
+.nav-links > a:first-child{
+  position:absolute;
+  left:50%;
+  transform: translateX(calc(-50% + var(--work-shift)));
+  font-weight:800; font-size:14.5px; letter-spacing:.2px;
+}
+
+/* keep the dropdown pinned to the right edge */
+.nav-links > .dropdown{ margin-left:auto; }
+
   </style>
 
   <!-- pdf.js (for reliable Prev/Next paging across browsers) -->
