your commit message

--- a/index.html
+++ b/index.html
@@ -179,7 +179,8 @@
 .nav-links{ position:relative; display:flex; align-items:center; gap:16px; width:100%; }
 
 /* amount to shift WORK to the right from center (tweak if you want) */
-:root{ --work-shift: 72px; }  /* try 60–90px range */
+/* amount to shift WORK to the right from center (tweak if you want) */
+:root{ --work-shift: 120px; }
 
 /* WORK link */
 .nav-links > a:first-child{
