--- a/races.html
+++ b/races.html
@@ -225,13 +225,13 @@ header.navbar .container{ width:100%; margin:0; padding:0 40px; }
   <!-- NAV: identical to index.html -->
   <header class="navbar">
     <div class="container nav-inner">
-      <a class="brand" href="#top">
+      <a class="brand" href="index.html#top">
         <img src="Snoopy_Welcome.png" alt="Logo">
         <span>Jan Arroyo</span>
       </a>
 
       <nav class="nav-links" aria-label="Primary">
-        <a href="#work" aria-label="Work">WORK</a>
+        <a href="index.html#work" aria-label="Work">WORK</a>
         <div class="dropdown" aria-expanded="false">
           <button type="button" aria-haspopup="true" aria-expanded="false" aria-label="Open Just for Fun menu">JUST FOR FUN ▾</button>
           <div class="dropdown-menu" role="menu" aria-label="Just for Fun">
@@ -582,7 +582,7 @@ function CourseMap({ img, src }){
 
     /* ------------ strava follow ------------- */
     function StravaCard(){
-      const url = STRAVA_ATHLETE_ID ? `https://www.strava.com/athletes/${STRAVA_ATHLETE_ID}` : "#";
+      const url = STRAVA_ATHLETE_ID ? `https://www.strava.com/athletes/${137523264}` : "#";
       const totalsYTD = sum(TRAINING.filter(d=>d.week.startsWith("2025")), "miles");
       const recent4 = TRAINING.slice(-4).map(d=>d.miles);
       const max4 = Math.max(1, ...recent4);
